# psync

./: .dockerignore  .gitignore  .readthedocs.yml  README.md  client.dockerfile  example.py  pyproject.toml  server.dockerfile
.github/workflows/: publish.yml  test.yml
docker/: client.dockerfile  run-server.sh  server-graphical.dockerfile  server.dockerfile
docker/graphical/: Dockerfile
docker/server/: Dockerfile
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
example/: README.md  example.py
src/: data.py  server.py  server_old.py
src/client/: args.py  main.py
src/common/: data.py  log.py
src/server/: args.py  main.py
test/: conftest.py  test_integration.py
test/assets/: .gitignore  README.md  cert.pem  docker-compose.yml  example.py  example_basic.py  key.pem  server.docker-compose.yml  ssh-key  ssh-key.pub
typings/client/: args.pyi  main.pyi
typings/common/: __init__.pyi  data.pyi  log.pyi
