[project]
name = "psync"
version = "0.1.0"
description = "Simple project synchronization tool."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "setuptools>=80.9.0",
    "websockets>=15.0.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
