[project]
name = "cubething_psync"
version = "0.2.1.dev1"
description = "Simple project synchronization tool."
authors = [{name = "ada mandala", email="ada@cubething.dev"}]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Unix"
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "build>=1.3.0",
    "loguru>=0.7.3",
    "setuptools>=80.9.0",
    "websockets>=15.0.1",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where= ["src"]

[project.scripts]
psync-server = "server.main:main"
psync-client = "client.main:main"
